--- a/css/lib/sm.css
+++ b/css/lib/sm.css
@@ -2378,9 +2378,9 @@ input[type="button"].button {
   border-radius: 0;
 }
 .buttons-tab .button.active {
-  color: #ddc27b;
+  color: #a7cf14;
   z-index: 100;
-  border-bottom: 1px solid #ddc27b;
+  border-bottom: 1px solid #a7cf14;
 }
 .buttons-fixed {
   position: fixed;
