--- a/css/master.css
+++ b/css/master.css
@@ -533,3 +533,63 @@ input[type=checkbox]:checked {
   text-align: right;
 }
 /**********************************个人信息页面end**********************************/
+/**********************************添加商品页面begin**********************************/
+.addProduct-content .addSpec{
+  display: block;
+    float: right;
+    color: #fff;
+    background-color: #a7cf14;
+    text-align: center;
+    line-height: 30px;
+    height:30px;
+    border-radius: 4px;
+    width: 120px;
+    font-size: 14px;
+}
+.productImg{
+  margin-top: 20px;
+}
+.pic-box {
+  width: 100%;
+  height: auto;
+  padding-bottom: 1.2rem;
+  margin-left: 0.7rem;
+}
+.pic-box .pic-item {
+  height: 4rem;
+  width: 4rem;
+  border: 0.1rem dashed #999;
+  border-radius: 0.1rem;
+}
+.pic-box .pic-ico {
+  display: block;
+  width: 1.1rem;
+  height: 1.0rem;
+  margin: 0.9rem auto 0.4rem;
+}
+.pic-box .pic-text {
+  color: #999;
+  text-align: center;
+  font-size: 12px;
+}
+.addProduct-content .imgList  {
+    width: 100%;
+    min-height:100px;
+}
+.addProduct-content .imgList li {
+    margin: 0 0 10px 2%;
+    float: left;
+    width: 30%;
+    height: 80px;
+    position: relative;
+}
+.addProduct-content .imgList li img {
+    width: 100%;
+    height: 80px;
+}
+.addProduct-content .p-name{
+  font-size: 16px;
+  line-height: 30px;
+  margin-left: 0.75rem;
+}
+/**********************************添加商品页面end**********************************/
