--- a/css/base.css
+++ b/css/base.css
@@ -112,4 +112,8 @@
 .tab-label {
     margin-top: 0.1rem;
     font-size: 12px;
+    line-height: normal;
+}
+.bar-tab .tab-item.active, .bar-tab .tab-item:active{
+  color: #a7cf14;
 }
