--- a/css/reset.css
+++ b/css/reset.css
@@ -35,6 +35,9 @@
  .f0 {
      font-size: 0;
  }
+ .fn{
+     line-height: normal;
+ }
  .pull-left {
      float: left;
  }
@@ -95,13 +98,13 @@
      font-size: 20px;
  }
  .xl {
-     font-size: 16px;
+     font-size: 16px!important;
  }
  .l {
-     font-size: 14px;
+     font-size: 14px!important;
  }
  .m {
-     font-size: 12px;
+     font-size: 12px!important;
  }
  .lack {
      display: none;
@@ -202,6 +205,16 @@
      line-height: 2.3rem;
      font-size: 16px;
  }
+  .bar .inp{
+     margin-top: 0.25rem;
+     height: 1.8rem;
+     background-color: #f4f4f4;
+     padding-left: 0.5rem;
+     font-size: 14px;
+  }
+  .bar .search{
+     padding: 0 0.8rem;
+  }
  .bar .title {
      font-size: 16px;
      line-height: 2.3rem;
@@ -223,6 +236,7 @@
  }
  .page {
      background: #fff;
+     z-index: 1;
  }
   .checkbox:checked +.select{
   color: #c0dc55;
@@ -239,4 +253,12 @@
     font-size: 14px;
     top: 2.3rem;
     margin-bottom: 3rem;
+}
+.expand{
+     position: fixed;
+     top: 0;
+     z-index: 2;
+     width: 100%;
+     height: 100%;
+     background-color: rgba(0, 0, 0, 0.5);
 }
