--- a/css/base.css
+++ b/css/base.css
@@ -109,7 +109,16 @@
     width: 1rem;
     margin: 0.4rem auto 0;
 }
+.bar .icon-jiantouright{
+  height: 2.3rem;
+   line-height: 2.3rem;
+}
 .tab-label {
     margin-top: 0.1rem;
     font-size: 12px;
+}
+.button {
+  height: 2.25rem !important;
+  line-height: 2.25rem !important;
+  font-size: 14px;
 }
