--- a/css/module.css
+++ b/css/module.css
@@ -268,13 +268,14 @@
 }
 .goods-box .join {
   position: absolute;
-  right: 1.2rem;
+  right: 0.5rem;
   bottom: 1rem;
   background-color: #eb392f;
   color: #fff;
   font-size: 18px;
   border-radius: 0.3rem;
   padding: 0.2rem 0.5rem;
+  font-size: 16px;
 }
 .goods-box .person {
   color: #999;
@@ -286,6 +287,9 @@
 .swiper-container {
   height: 18.8rem;
   width: 100%;
+}
+.swiper-container img {
+  height: 100%;
 }
 .swiper-container .back,
 .swiper-container .share {
@@ -301,10 +305,10 @@
   font-size: 18px;
 }
 .swiper-container .back {
-  left: 1rem;
+  left: 0.5rem;
 }
 .swiper-container .share {
-  right: 1rem;
+  right: 0.5rem;
 }
 .swiper-pagination-bullet-active {
   background-color: #a7cf14;
@@ -330,16 +334,23 @@
 .group .inf-box {
   line-height: 3.5rem;
 }
+.group .addre {
+  white-space: nowrap;
+}
+.group .inf-a {
+  padding: 0.3rem;
+}
 .group .pic {
   width: 2.55rem;
   height: 2.55rem;
   border-radius: 50%;
+  margin: 0 0.3rem;
 }
 .group .join {
   background-color: #eb392f;
   color: #fff;
-  line-height: 1.8rem;
-  width: 4rem;
+  line-height: 1.5rem;
+  width: 3.5rem;
   border-radius: 0.2rem;
   text-align: center;
 }
@@ -388,10 +399,14 @@
   border-radius: 50%;
 }
 .assess .img {
+  width: 32%;
   height: 5.35rem;
 }
+.assess .pic-box {
+  overflow: hidden;
+}
 .assess .img + .img {
-  margin-left: 3%;
+  margin-left: 2%;
 }
 .items-wrapper {
   background-color: #fff;
@@ -496,4 +511,83 @@
   color: #7a7a7a;
   font-size: 18px;
   font-weight: bold;
+}
+.spec-box {
+  display: none;
+  position: absolute;
+  width: 100%;
+  z-index: 3;
+  line-height: 1.1rem;
+  text-align: center;
+  background-color: #fff;
+  bottom: 0;
+}
+.spec-box .goodpic {
+  position: absolute;
+  width: 6.1rem;
+  height: 6.1rem;
+  border-radius: 0.2rem;
+  border: 0.05rem solid #999;
+  top: -0.8rem;
+  left: 0.5rem;
+}
+.spec-box .spec-main {
+  margin: 0.5rem 7% 1rem 43%;
+  width: 50%;
+  text-align: left;
+}
+.spec-box .spec {
+  width: 29%;
+  margin-left: 3%;
+  line-height: 1.8rem;
+  border-radius: 0.4rem;
+  background-color: #f5f5f5;
+  font-size: 14px;
+  margin-bottom: 0.5rem;
+}
+.spec-box .active {
+  background-color: #fa8300;
+  color: #fff;
+}
+.spec-box .numsel {
+  box-sizing: border-box;
+  padding: 0.5rem;
+  line-height: 1.95rem;
+}
+.spec-box .reduce,
+.spec-box .add {
+  display: inline-block;
+  width: 2.35rem;
+  height: 1.95rem;
+  text-align: center;
+  background-color: #f5f5f5;
+  border-radius: 0.2rem;
+  font-size: 20px;
+  font-weight: bold;
+  color: #999;
+}
+.spec-box .bottom {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  color: #fff;
+}
+.spec-box .goCart {
+  background-color: #424242;
+}
+.spec-box .joingroup {
+  background-color: #ffb701;
+}
+.spec-box .close-box {
+  position: absolute;
+  top: 0.3rem;
+  right: 0.3rem;
+  color: #999999;
+  font-size: 1.0rem;
+  font-weight: bold;
+}
+.spec-box .mb {
+  padding-bottom: 4rem;
 }
